--- a/project/netlify.toml
+++ b/project/netlify.toml
@@ -1,2 +1,9 @@
 [build]
-  functions = "eval.js"
+  base = "project"
+  functions = "netlify/functions"
+  publish = "."
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
