--- a/project/package.json
+++ b/project/package.json
@@ -1,5 +1,7 @@
-  "name": "your-project",
+{
+  "name": "ai-chat-functions",
   "version": "1.0.0",
   "dependencies": {
     "node-fetch": "^2.6.7"
   }
+}
